<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_movie"
        android:clipToPadding="false"
        android:paddingBottom="8dp"/>
</LinearLayout>
